Perkin-UAT/force-app/main/default/objects/Account_Function__c/Account_Function__c.object-meta.xml
<CustomObject>
    <description>Joins the Account objects in a many-to-many relationship</description>
    <label>Account Function</label>
    <nameField>
        <displayFormat>FID-{000000000}</displayFormat>
        <label>Account Function Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Functions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>