Perkin-UAT/force-app/main/default/objects/Account_Function__c/fields/fxPartnerType__c.field-meta.xml
<CustomField>
    <fullName>fxPartnerType__c</fullName>
    <description>This field is used to show sap account number along with partner type (QUOT-6)</description>
    <formula>PKI_SAP_Target_Account_Number__c&amp;&quot;,&quot;&amp;PKI_SAP_Partner_Type_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fxPartnerType</label>
    <type>Text</type>
</CustomField>