Perkin-UAT/force-app/main/default/objects/Account_Function__c/fields/fxSAPHasDeal__c.field-meta.xml
<CustomField>
    <fullName>fxSAPHasDeal__c</fullName>
    <formula>Target_Account__r.SAPHasDeal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fxSAPHasDeal</label>
    <type>Checkbox</type>
</CustomField>