Perkin-UAT/force-app/main/default/objects/Account_Function__c/fields/fxSAPTransactionCount__c.field-meta.xml
<CustomField>
    <fullName>fxSAPTransactionCount__c</fullName>
    <formula>Target_Account__r.SAPTransactioncount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fxSAPTransactionCount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>