Perkin-UAT/force-app/main/default/objects/Account_Function__c/fields/PKI_SAP_Partner_Type__c.field-meta.xml
<CustomField>
    <fullName>PKI_SAP_Partner_Type__c</fullName>
    <inlineHelpText>EN/Country of Ultimate Destination
RE/Bill-to
RG/Payer
WE/Ship-to
YA/Bill-to Local Language
YB/Ship-to Local Language
ZD/Payer (EEU2)
ZF/Replacement Shipping Address</inlineHelpText>
    <label>PKI SAP Partner Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>