Perkin-UAT/force-app/main/default/objects/Account_Function__c/fields/PKI_SAP_Sales_Org__c.field-meta.xml
<CustomField>
    <fullName>PKI_SAP_Sales_Org__c</fullName>
    <label>PKI SAP Sales Org</label>
    <length>4</length>
    <type>Text</type>
</CustomField>