Perkin-UAT/force-app/main/default/objects/Account_Function__c/fields/PKI_SAP_Source_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>PKI_SAP_Source_Account_Number__c</fullName>
    <description>Represents the Source Customer Number</description>
    <label>PKI SAP Source Account Number</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>