Perkin-UAT/force-app/main/default/objects/Account_Function__c/fields/PKI_SAP_Target_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>PKI_SAP_Target_Account_Number__c</fullName>
    <description>Represents the Target Account Customer Number</description>
    <label>PKI SAP Target Account Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>