Perkin-UAT/force-app/main/default/objects/Account_Function__c/fields/Source_Account__c.field-meta.xml
<CustomField>
    <fullName>Source_Account__c</fullName>
    <label>Source Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>SourceAccountFunctions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>