Perkin-UAT/force-app/main/default/objects/Account_Function__c/fields/Target_Account__c.field-meta.xml
<CustomField>
    <fullName>Target_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Target Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>TargetAccountFunctions</relationshipName>
    <type>Lookup</type>
</CustomField>