Perkin-UAT/force-app/main/default/objects/Account_Function__c/listViews/Account_Functions_All.listView-meta.xml
<ListView>
    <fullName>Account_Functions_All</fullName>
    <columns>NAME</columns>
    <columns>fxAccountInfo__c</columns>
    <columns>fxAccountName__c</columns>
    <columns>fxPartnerType__c</columns>
    <columns>fxSAPHasDeal__c</columns>
    <columns>fxSAPTransactionCount__c</columns>
    <columns>Key__c</columns>
    <columns>PKI_SAP_Partner_Type__c</columns>
    <columns>PKI_SAP_Partner_Type_Name__c</columns>
    <columns>PKI_SAP_Sales_Org__c</columns>
    <columns>PKI_SAP_Source_Account_Number__c</columns>
    <columns>PKI_SAP_Target_Account_Number__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>Source_Account__c</columns>
    <columns>Target_Account__c</columns>
    <filterScope>Everything</filterScope>
    <label>Account Functions: All</label>
</ListView>