Perkin-UAT/force-app/main/default/objects/Account_Function__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>PKI_SAP_Partner_Type__c</columns>
    <columns>PKI_SAP_Source_Account_Number__c</columns>
    <columns>PKI_SAP_Target_Account_Number__c</columns>
    <columns>Source_Account__c</columns>
    <columns>Target_Account__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PKI_SAP_Source_Account_Number__c</field>
        <operation>equals</operation>
        <value>0100868141</value>
    </filters>
    <label>All</label>
</ListView>